extends VBoxContainer



func _on_Button_pressed():
	get_tree().change_scene("res://Baju/Info/DayakInfo.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://Baju/Info/EwerInfo.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Baju/Info/GorontaloInfo.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://Baju/Info/KainIkatInfo.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://Baju/Info/KebayaSundaInfo.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Baju/Info/Kebaya.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Baju/Info/KesatrianInfo.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Baju/Info/KutaiInfo.tscn")


func _on_Button9_pressed():
	get_tree().change_scene("res://Baju/Info/LakuTepoInfo.tscn")


func _on_Button10_pressed():
	get_tree().change_scene("res://Baju/Info/LombokInfo.tscn")


func _on_Button11_pressed():
	get_tree().change_scene("res://Baju/Info/ManterenInfo.tscn")


func _on_Button12_pressed():
	get_tree().change_scene("res://Baju/Info/MelayuBengkuluInfo.tscn")
